Add basic LevelCounter (draft)

--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -10,6 +10,7 @@ $mainBackS: #F3CF94;
 $mainBackT: #D4AC6A;
 
 $shadow: rgba($mainColor, .2);
+$shadowS: rgba($mainColor, .15);
 
 // $auxColor: #010101;
 // $auxColorS: #111111;
