--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
 html {
     touch-action: manipulation;
@@ -7,7 +6,7 @@ html {
 
 html, body, input, button {
     font-size: 16px;
-    font-family: Montserrat, sans-serif;
+    font-family: 'Comfortaa', cursive;
 }
 
 body {
