--- a/src/components/Player/style.scss
+++ b/src/components/Player/style.scss
@@ -1,3 +1,32 @@
 .main {
     display: flex;
+    width: 100%;
+    padding: 4px 12px 12px 12px;
+    border: 4px solid #000;
+}
+
+.face {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > :last-child {
+        margin-top: auto;
+    }
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    padding-left: 12px;
+}
+
+.info {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 12px;
+
+    & > * + * {
+        margin-left: 16px;
+    }
 }
