--- a/src/components/CardCounter/style.scss
+++ b/src/components/CardCounter/style.scss
@@ -2,11 +2,21 @@
     display: flex;
     align-items: baseline;
     font-size: 18px;
+    & > :last-child {
+        margin-left: 8px;
+    }
+
+    &.column {
+        flex-direction: column;
+        align-items: center;
+        & > :last-child {
+            margin-left: 0;
+        }
+    }
 }
 
 .treasureImage {
     width: 22px;
-    margin-right: 8px;
     margin-left: 2px;
 }
 
