Add basic Hand (draft)

--- a/src/components/CardList/style.scss
+++ b/src/components/CardList/style.scss
@@ -1,6 +1,7 @@
 .main {
     display: grid;
     grid-auto-flow: column;
+    justify-content: flex-start;
     grid-gap: 8px;
     &.column {
         grid-auto-flow: row;
