--- a/src/components/Player/style.scss
+++ b/src/components/Player/style.scss
@@ -3,6 +3,7 @@
     width: 100%;
     padding: 4px 12px 12px 12px;
     border: 4px solid #000;
+    background-color: $mainBack;
 
     &.column {
         height: 100%;
