--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,7 +10,7 @@ html, body, input, button {
 }
 
 body {
-    background-color: $mainBack;
+    background-color: $mainBackT;
     color: $mainColor;
 }
 
