--- a/src/components/Controls/style.scss
+++ b/src/components/Controls/style.scss
@@ -1,29 +1,30 @@
 .main {
     position: absolute;
+    z-index: -1;
     width: 100%;
     height: 100%;
 }
 
 .topLeft {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -9%;
+    left: -4%;
 }
 
 .bottomLeft  {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: -9%;
+    left: -4%;
 }
 
 .topRight  {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: -9%;
+    right: -4%;
 }
 
 .bottomRight  {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: -9%;
+    right: -4%;
 }
