--- a/src/components/EmptyPlayer/style.scss
+++ b/src/components/EmptyPlayer/style.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     padding: 4px 12px 12px 12px;
-    border: 4px solid $mainColor;
+    border: 4px solid rgba($mainColor, 0.1);
     background-color: $mainBack;
 
     &.column {
