Change button padding in StartScreen

--- a/src/components/StartScreen/style.scss
+++ b/src/components/StartScreen/style.scss
@@ -33,6 +33,7 @@
     }
 
     & > button {
+        padding: 2px 4px;
         font-size: 18px;
         align-self: flex-end;
         margin-top: 16px;
