--- a/src/components/EmptyCardList/style.scss
+++ b/src/components/EmptyCardList/style.scss
@@ -1,4 +1,4 @@
-.grid {
+.main {
     display: grid;
     grid-auto-flow: column;
     justify-content: flex-start;
@@ -7,8 +7,4 @@
         grid-auto-flow: row;
         grid-template-columns: 1fr 1fr 1fr;
     }   
-}
-
-.emptyList {
-    position: absolute;
 }
